# PhotogrammetryTasks2024

./: .gitignore  CMakeLists.txt  LICENSE  README.md  REPORT.md  answers.md  answers2.md  log-no-omp.txt  log-no-subpixel-fitting.txt  log-subpixel-fitting.txt  log-votes-peak-99pc.txt  log-with-angle-fitting.txt  log-with-omp.txt  test_image_32f.exr
.github/: pull_request_template.md
.github/scripts/: install_ceres_solver200.sh  install_eigen3.sh  install_intel_opencl.sh  install_opencv451.sh
.github/workflows/: cmake.yml
___original/: sift.cpp
data/debug/test_sift/debug/different_sigma_piramid/: .gitignore
data/src/datasets/herzjesu25/: .gitignore  LINK.txt  ordered_filenames.txt
data/src/datasets/perseverance25/: LINK.txt  ordered_filenames.txt
data/src/datasets/saharov32/: LINK.txt  cameras.out  ordered_filenames.txt
data/src/datasets/saharov32/depthmaps_downscale4/: IMG_3023.exr  IMG_3024.exr  IMG_3025.exr  IMG_3026.exr  IMG_3027.exr  IMG_3028.exr  IMG_3029.exr  IMG_3030.exr  IMG_3031.exr  IMG_3032.exr  IMG_3033.exr  IMG_3034.exr  IMG_3035.exr  IMG_3036.exr  IMG_3037.exr  IMG_3038.exr  IMG_3039.exr  IMG_3040.exr  IMG_3041.exr  IMG_3042.exr  IMG_3043.exr  IMG_3044.exr  IMG_3045.exr  IMG_3046.exr  IMG_3047.exr  IMG_3048.exr  IMG_3049.exr  IMG_3050.exr  IMG_3051.exr  IMG_3052.exr  IMG_3053.exr  IMG_3054.exr
data/src/datasets/temple47/: LINK.txt  cameras.out  ordered_filenames.txt
libs/: CMakeLists.txt
libs/gpu/: LICENSE
libs/gpu/libgpu/: device.cpp  device.h
libs/gpu/libgpu/cuda/cu/: opencl_translator.cu
libs/gpu/libgpu/opencl/: engine.cpp
libs/utils/: CMakeLists.txt
libs/utils/libutils/: bbox2.h  misc.cpp  misc.h  rasserts.cpp  rasserts.h  string_utils.h  timer.h
src/phg/core/: calibration.cpp  calibration.h  camera.h
src/phg/matching/: bruteforce_matcher.cpp  bruteforce_matcher.h  bruteforce_matcher_gpu.cpp  bruteforce_matcher_gpu.h  descriptor_matcher.cpp  descriptor_matcher.h  flann_factory.h  flann_matcher.cpp  flann_matcher.h  gms_matcher.cpp  gms_matcher.h  gms_matcher_impl.h
src/phg/matching/cl/: bruteforce_matcher.cl
src/phg/mvs/depth_maps/: pm_depth_maps.cpp  pm_depth_maps.h  pm_depth_maps_defines.h  pm_fast_random.cpp  pm_fast_random.h  pm_geometry.cpp  pm_geometry.h
src/phg/mvs/model_min_cut/: min_cut_cgal_structs.cpp  min_cut_cgal_structs.h  min_cut_defines.h  min_cut_max_flow_solver.h  min_cut_model_builder.cpp  min_cut_model_builder.h
src/phg/mvs/model_min_cut/bk_solver/: README.md  block.h  graph.cpp  graph.h  instances.inc  maxflow.cpp
src/phg/sfm/: defines.h  ematrix.cpp  ematrix.h  fmatrix.cpp  fmatrix.h  homography.cpp  homography.h  panorama_stitcher.cpp  panorama_stitcher.h  resection.cpp  resection.h  sfm_utils.cpp  sfm_utils.h  triangulation.cpp  triangulation.h
src/phg/sift/: sift.cpp  sift.h
src/phg/utils/: cameras_bundler_export.cpp  cameras_bundler_export.h  cameras_bundler_import.cpp  cameras_bundler_import.h  mesh_export.cpp  mesh_export.h  point_cloud_export.cpp  point_cloud_export.h
tests/: answers.md  test_ceres_solver.cpp  test_depth_maps_pm.cpp  test_matching.cpp  test_mesh_min_cut.cpp  test_sfm.cpp  test_sfm_ba.cpp  test_sift.cpp
tests/utils/: test_utils.cpp  test_utils.h
